# matrix

./: .gitignore  Cargo.toml  README.md
maths/src/: lib.rs  utils.rs
maths/src/complex/: conversions.rs  mod.rs
maths/src/matrix/: mod.rs  utilities.rs
maths/src/matrix/conversions/: array.rs  mod.rs  vec.rs
maths/src/matrix/impls/: determinant.rs  inverse.rs  mod.rs  rank.rs  row_echelon.rs  trace.rs  transpose.rs
maths/src/matrix/operators/: add.rs  div.rs  eq.rs  index.rs  mod.rs  mul.rs  sub.rs
maths/src/quaternion/: utilities.rs
maths/src/vector/: mod.rs  utilities.rs
maths/src/vector/conversions/: array.rs  matrix.rs  mod.rs  vec.rs
maths/src/vector/impls/: angle.rs  cross.rs  dot.rs  mod.rs  norm.rs
maths/src/vector/operators/: add.rs  div.rs  eq.rs  index.rs  mod.rs  mul.rs  neg.rs  sub.rs
src/: main.rs  unit.rs  utils.rs
src/complex/: conversions.rs  mod.rs  operators.rs  utilities.rs
src/exercises/: ex00.rs  ex01.rs  ex02.rs  ex03.rs  ex04.rs  ex05.rs  ex06.rs  ex07.rs  ex08.rs  ex09.rs  ex10.rs  ex11.rs  ex12.rs  ex13.rs  ex14.rs  ex15.rs  mod.rs
src/matrix/: conversions.rs  mod.rs  operators.rs  utilities.rs
src/quaternion/: conversions.rs  operators.rs  utilities.rs
src/utils/: abs.rs  mod.rs  sqr.rs  unit.rs
src/vector/: conversions.rs  mod.rs  operators.rs  utilities.rs
utils/src/: lib.rs
